Extended transient API of QMeta to read workers-to-chunks map from database

--- a/src/qdisp/CMakeLists.txt
+++ b/src/qdisp/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(qdisp PRIVATE
     ChunkMeta.cc
     CzarStats.cc
     Executive.cc
+    JobBase.cc
     JobDescription.cc
     JobQuery.cc
     UberJob.cc
