--- a/src/xrdsvc/CMakeLists.txt
+++ b/src/xrdsvc/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(xrdsvc PRIVATE
     HttpModule.cc
     HttpMonitorModule.cc
     HttpReplicaMgtModule.cc
+    HttpWorkerCzarModule.cc
     HttpSvc.cc
     SsiProvider.cc
     SsiRequest.cc
