Extended transient API of QMeta to read workers-to-chunks map from database

--- a/src/qmeta/CMakeLists.txt
+++ b/src/qmeta/CMakeLists.txt
@@ -20,6 +20,14 @@ target_link_libraries(qmeta PUBLIC
     mysqlclient_r
     http 
 )
+# &&& see if there's a way to remove some target_link_libraries
+# &&&   ccontrol
+# &&&    czar
+# &&&    parser
+# &&&    rproc
+# &&&    qana
+# &&&    qproc
+# &&&    query  
 
 install(TARGETS qmeta)
 install(DIRECTORY schema/ DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/smig/qmeta/schema/)
