--- a/admin/local/docker/compose/docker-compose.yml
+++ b/admin/local/docker/compose/docker-compose.yml
@@ -459,6 +459,7 @@ services:
           --registry-host=repl-registry
           --controller-auto-register-workers=1
           --qserv-sync-force
+          --qserv-chunk-map-update
           --debug
         expose:
             - "25081"
