Worker-side REST service for ingesting JSON-formatted contributions
The data are sent into the Ingest service directly in the request's body

--- a/src/replica/ingest/CMakeLists.txt
+++ b/src/replica/ingest/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(replica_ingest OBJECT)
 add_dependencies(replica_ingest replica_proto)
 target_sources(replica_ingest PRIVATE
     IngestClient.cc
+    IngestDataHttpSvcMod.cc
     IngestFileSvc.cc
     IngestHttpSvc.cc
     IngestHttpSvcMod.cc
