--- a/src/czar/CMakeLists.txt
+++ b/src/czar/CMakeLists.txt
@@ -4,6 +4,7 @@ target_sources(czar PRIVATE
     ChttpModule.cc
     Czar.cc
     CzarChunkMap.cc
+    CzarRegistry.cc
     HttpCzarIngestCsvModule.cc
     HttpCzarIngestModuleBase.cc
     HttpCzarIngestModule.cc
