Added UberJob branch code.

--- a/src/qdisp/CMakeLists.txt
+++ b/src/qdisp/CMakeLists.txt
@@ -5,12 +5,14 @@ target_sources(qdisp PRIVATE
     ChunkMeta.cc
     CzarStats.cc
     Executive.cc
+    JobBase.cc
     JobDescription.cc
     JobQuery.cc
     JobStatus.cc
     MessageStore.cc
     QdispPool.cc
     QueryRequest.cc
+    UberJob.cc
     XrdSsiMocks.cc
 )
 
