Improved configuration of the public ports in the integration test
Added an option to reconfigure the default value of the HTTP
frontend port that is injected into the host environment.

--- a/admin/local/docker/compose/docker-compose.yml
+++ b/admin/local/docker/compose/docker-compose.yml
@@ -416,7 +416,7 @@ services:
         expose:
             - "4048"
         ports:
-            - "0.0.0.0:4048:4048"
+            - "0.0.0.0:${QSERV_HTTP_FRONTEND_PORT:-4048}:4048"
     repl_mariadb:
         image: "${QSERV_MARIADB_IMAGE:?err}"
         init: true
