Czar and workers can send http messages to each other.

--- a/src/qmeta/CMakeLists.txt
+++ b/src/qmeta/CMakeLists.txt
@@ -14,23 +14,8 @@ target_link_libraries(qserv_meta PUBLIC
     qserv_common
     log
     mysqlclient_r
-    
-#    ccontrol
-#    czar
-#    parser
-#    rproc
-#    qana
-#    qproc
-#    query  
+    http 
 )
-# &&& see if there's a way to remove some target_link_libraries
-# &&&   ccontrol
-# &&&    czar
-# &&&    parser
-# &&&    rproc
-# &&&    qana
-# &&&    qproc
-# &&&    query  
 
 install(TARGETS qserv_meta)
 install(DIRECTORY schema/ DESTINATION ${CMAKE_INSTALL_PREFIX}/qserv/smig/qmeta/schema/)
