--- a/src/czar/CMakeLists.txt
+++ b/src/czar/CMakeLists.txt
@@ -11,6 +11,8 @@ target_sources(czar PRIVATE
     HttpCzarIngestModule.cc
     HttpCzarQueryModule.cc
     HttpCzarSvc.cc
+    HttpCzarWorkerModule.cc
+    HttpModule.cc
     HttpMonitorModule.cc
     HttpSvc.cc
     MessageTable.cc
