Implemented a simple version of the multipart body parser in Qhttp.
Extended the unit test of qhttp to test the parser.

--- a/src/qhttp/CMakeLists.txt
+++ b/src/qhttp/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(qhttp SHARED)
 
 target_sources(qhttp PRIVATE
     AjaxEndpoint.cc
+    MultiPartParser.cc
     Path.cc
     Request.cc
     Response.cc
