Added a standalone HTTP server test for cpp-httplib
The test was added to an existing test suit of the Replication/Ingest
system.

--- a/src/replica/apps/CMakeLists.txt
+++ b/src/replica/apps/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(replica_apps PRIVATE
     ControllerApp.cc
     DatabaseTestApp.cc
     DeleteWorkerApp.cc
+    DirectorIndexApp.cc
     FileExportApp.cc
     FileIngestApp.cc
     FileReadApp.cc
@@ -22,7 +23,7 @@ target_sources(replica_apps PRIVATE
     FixUpApp.cc
     HttpAsyncReqApp.cc
     HttpClientApp.cc
-    DirectorIndexApp.cc
+    HttpLibServerApp.cc
     MasterControllerHttpApp.cc
     MessengerTestApp.cc
     MoveApp.cc
