Refactoring in a hierarchy of the HTTP modules
The former base class http::ModuleBase was split into
the HTTP library neutral class http::Module and the QHTTP-specific
intermediate base class http::QhttpModule. All existing modules that were
based on the former were migrated to depend on the the latter.

This refactoring prepared ground for introducing another intermediate
base class for the HTTPLIB-based REST services.

--- a/src/http/CMakeLists.txt
+++ b/src/http/CMakeLists.txt
@@ -10,8 +10,9 @@ target_sources(http PRIVATE
     Exceptions.cc
     MetaModule.cc
     Method.cc
-    ModuleBase.cc
-    RequestBody.cc
+    Module.cc
+    QhttpModule.cc
+    RequestBodyJSON.cc
     RequestQuery.cc
     Url.cc
 )
