CzarFamilyMap create now waits for a successful read.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,6 +65,7 @@ add_subdirectory(http)
 add_subdirectory(mysql)
 add_subdirectory(parser)
 add_subdirectory(partition)
+add_subdirectory(proto)
 add_subdirectory(protojson)
 add_subdirectory(proxy)
 add_subdirectory(qana)
@@ -86,4 +87,6 @@ add_subdirectory(wmain)
 add_subdirectory(wpublish)
 add_subdirectory(wsched)
 add_subdirectory(www)
+add_subdirectory(xrdlog)
+add_subdirectory(xrdsvc)
 
