--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -286,6 +286,11 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install docker-compose
+        uses: KengoTODA/actions-setup-docker-compose@v1
+        with:
+          version: '1.29.2'
+
       - name: Install click
         run: |
           python -m pip install --upgrade pip
