Replaced QHTTP with CPP-HTTPLIB in worker ingest services

--- a/src/replica/util/CMakeLists.txt
+++ b/src/replica/util/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(replica_util OBJECT)
 add_dependencies(replica_util replica_proto)
 target_sources(replica_util PRIVATE
+    ChttpSvc.cc
     ChunkNumber.cc
     ChunkedTable.cc
     Common.cc
