Refactoring in the base classes of the Qserv REST services
Class http::Module was split into two modules: http::BaseModule
and a reduced version of http::Module. The new hierarchy is meant
to prepare ground for introducing an intermediate base class that
will support data streaming (and file uploading requests) in which
the request body can't be read at once. The new class will inherit
from http::BaseModule.

--- a/src/http/CMakeLists.txt
+++ b/src/http/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(http SHARED)
 
 target_sources(http PRIVATE
     AsyncReq.cc
+    BaseModule.cc
     BinaryEncoding.cc
     ChttpMetaModule.cc
     ChttpModule.cc
