--- a/src/wcontrol/CMakeLists.txt
+++ b/src/wcontrol/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(wcontrol PRIVATE
     ResourceMonitor.cc
     SqlConnMgr.cc
     WorkerStats.cc
+    WCzarInfoMap.cc
 )
 
 target_include_directories(wcontrol PRIVATE
