Added AWS to the Qserv CMake dependencies

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,18 @@ find_package(pybind11 REQUIRED)
 find_package(Threads REQUIRED)
 find_package(XRootD REQUIRED)
 find_package(httplib REQUIRED)
+find_package(aws-c-auth REQUIRED)
+find_package(aws-c-cal REQUIRED)
+find_package(aws-c-common REQUIRED)
+find_package(aws-c-compression REQUIRED)
+find_package(aws-c-event-stream REQUIRED)
+find_package(aws-c-http REQUIRED)
+find_package(aws-c-io REQUIRED)
+find_package(aws-c-mqtt REQUIRED)
+find_package(aws-c-s3 REQUIRED)
+find_package(aws-c-sdkutils REQUIRED)
+find_package(aws-checksums REQUIRED)
+find_package(aws-crt-cpp REQUIRED)
 
 add_compile_options(-Og -g -Wall -Wextra -Wno-unused-parameter)
 add_compile_definitions(BOOST_TEST_DYN_LINK=1)
