--- a/src/qdisp/CMakeLists.txt
+++ b/src/qdisp/CMakeLists.txt
@@ -5,7 +5,6 @@ target_sources(qdisp PRIVATE
     ChunkMeta.cc
     CzarStats.cc
     Executive.cc
-    JobBase.cc
     JobDescription.cc
     JobQuery.cc
     UberJob.cc
@@ -44,6 +43,6 @@ target_link_libraries(testQDisp
 )
 
 # This is failing in github actions CI but not when running locally on my dev machine.
-# add_test(NAME testQDisp COMMAND testQDisp)
+add_test(NAME testQDisp COMMAND testQDisp)
 
 # set_tests_properties(testQDisp PROPERTIES WILL_FAIL 1)
