Refactored the Czar REST service for ingesting user tables
The rafactoring prepares ground for introducing another implementation
of the REST API for ingesting tables in the "multi-part/form" body.
The new intermediate base class will prevent code duplication
after adding the second module.

--- a/src/czar/CMakeLists.txt
+++ b/src/czar/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(czar OBJECT)
 target_sources(czar PRIVATE
     ChttpModule.cc
     Czar.cc
+    HttpCzarIngestModuleBase.cc
     HttpCzarIngestModule.cc
     HttpCzarQueryModule.cc
     HttpCzarSvc.cc
