Added the post-itest log grabber for the HTTP frontend in GHA CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -356,6 +356,10 @@ jobs:
         if: always()
         run: docker logs ${USER}_czar_proxy_1
 
+      - name: Czar HTTP Frontend Log
+        if: always()
+        run: docker logs ${USER}_czar_http_1
+
       - name: Czar CMSD Log
         if: always()
         run: docker logs ${USER}_czar_cmsd_1
