--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -327,6 +327,11 @@ jobs:
           ./admin/local/cli/qserv --log-level DEBUG itest-http --reload --load-http \
           --qserv-image ${{ needs.image-names.outputs.qserv-image }} \
           --mariadb-image ${{ needs.image-names.outputs.mariadb-image }}
+
+      - name: Run integration tests of ingesting user tables via the HTTP frontend
+        run: |
+            ./admin/local/cli/qserv --log-level DEBUG itest-http-ingest \
+            --qserv-image ${{ needs.image-names.outputs.qserv-image }}
   
       - name: Check Qserv containers
         if: always()
