Upgraded MariaDB from 10.6.8 to 11.4.4
Also upgraded to the newer release 0.8.5.lsst8 of mysqlproxy which supports
MariaDB 11.

--- a/admin/tools/docker/base/Dockerfile
+++ b/admin/tools/docker/base/Dockerfile
@@ -112,6 +112,7 @@ RUN cd /usr/share/java \
 RUN cd /tmp \
     && git clone https://github.com/lsst/mysqlproxy \
     && cd mysqlproxy \
+    && git checkout 0.8.5.lsst8 \
     && cp /usr/lib64/pkgconfig/lua-5.1.pc /usr/lib64/pkgconfig/lua5.1.pc \
     && ./configure \
     && make \
