--- a/src/http/CMakeLists.txt
+++ b/src/http/CMakeLists.txt
@@ -19,7 +19,7 @@ target_sources(http PRIVATE
     RequestBodyJSON.cc
     RequestQuery.cc
     Url.cc
-    WorkerQueryStatusData.cc
+# &&&   WorkerQueryStatusData.cc
 )
 
 target_link_libraries(http PUBLIC
@@ -52,6 +52,6 @@ http_tests(
     testAsyncReq
     testRequestBodyJSON
     testRequestQuery
-    testStatusData
+# &&&    testStatusData
     testUrl
 )
