--- a/src/czar/CMakeLists.txt
+++ b/src/czar/CMakeLists.txt
@@ -26,6 +26,7 @@ target_include_directories(czar PRIVATE
 target_link_libraries(czar PUBLIC
     cconfig
     http
+    protojson
     qdisp
     qhttp
     util
