--- a/src/protojson/CMakeLists.txt
+++ b/src/protojson/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(protojson SHARED)
 
 target_sources(protojson PRIVATE
+	ScanTableInfo.cc
     UberJobMsg.cc
     WorkerQueryStatusData.cc
 )
