The HTTP-based backend of the Replication worker services

--- a/src/replica/proto/CMakeLists.txt
+++ b/src/replica/proto/CMakeLists.txt
@@ -4,4 +4,5 @@ add_library(replica_proto OBJECT)
 target_sources(replica_proto PRIVATE
     ${REPLICA_PB_SRCS}
     ${REPLICA_PB_HDRS}
+    Protocol.cc
 )
