--- a/src/replica/worker/CMakeLists.txt
+++ b/src/replica/worker/CMakeLists.txt
@@ -4,19 +4,31 @@ target_sources(replica_worker PRIVATE
     FileClient.cc
     FileServer.cc
     FileServerConnection.cc
+    WorkerCreateReplicaHttpRequest.cc
+    WorkerDeleteReplicaHttpRequest.cc
     WorkerDeleteRequest.cc
+    WorkerDirectorIndexHttpRequest.cc
     WorkerDirectorIndexRequest.cc
+    WorkerEchoHttpRequest.cc
     WorkerEchoRequest.cc
     WorkerExporterHttpSvc.cc
     WorkerExporterHttpSvcMod.cc
     WorkerFindAllRequest.cc
+    WorkerFindAllReplicasHttpRequest.cc
+    WorkerFindReplicaHttpRequest.cc
     WorkerFindRequest.cc
+    WorkerHttpProcessor.cc
+    WorkerHttpProcessorThread.cc
+    WorkerHttpRequest.cc
+    WorkerHttpSvc.cc
+    WorkerHttpSvcMod.cc
     WorkerProcessor.cc
     WorkerProcessorThread.cc
     WorkerReplicationRequest.cc
     WorkerRequest.cc
     WorkerServer.cc
     WorkerServerConnection.cc
+    WorkerSqlHttpRequest.cc
     WorkerSqlRequest.cc
     WorkerUtils.cc
 )
