--- a/src/ccontrol/CMakeLists.txt
+++ b/src/ccontrol/CMakeLists.txt
@@ -17,6 +17,7 @@ target_sources(ccontrol PRIVATE
     UserQueryFactory.cc
     UserQueryFlushChunksCache.cc
     UserQueryProcessList.cc
+    UserQueryQueries.cc
     UserQuerySelectCountStar.cc
     UserQueryQservManager.cc
     UserQueryResources.cc
